--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/me.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tayls</title>
+    <title>iris</title>
   </head>
   <body class="theme-mocha">
     <div id="app"></div>
