fix(workflow): possibly fix

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" href="/me.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iris</title>
+    <script>
+      const redirect = sessionStorage.getItem('redirect');
+      if (redirect) {
+        sessionStorage.removeItem('redirect');
+        history.replaceState(null, null, redirect);
+      }
+    </script>
   </head>
   <body class="theme-mocha">
     <div id="app"></div>
