feat: set document.title

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iris</title>
     <script>
-      const urlParams = new URLSearchParams(window.location.search);
-      const redirect = urlParams.get('redirect');
+      // const urlParams = new URLSearchParams(window.location.search);
+      // const redirect = urlParams.get('redirect');
 
-      if (redirect) {
-        const url = redirect;
-        window.history.replaceState({}, document.title, url);
-      }
+      // if (redirect) {
+      //   const url = redirect;
+      //   window.history.replaceState({}, document.title, url);
+      // }
     </script>
   </head>
   <body class="theme-mocha">
