chore: remove log statement & commented out code

--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/me.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>iris</title>
-    <script>
-      // const urlParams = new URLSearchParams(window.location.search);
-      // const redirect = urlParams.get('redirect');
-
-      // if (redirect) {
-      //   const url = redirect;
-      //   window.history.replaceState({}, document.title, url);
-      // }
-    </script>
+    <title>iris!</title>
   </head>
   <body class="theme-mocha">
     <div id="app"></div>
