feat: add manifet

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <meta property="og:locale" content="en_GB" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="theme-color" content="#94e2d5" />
+    <meta name="theme-color" content="#BCA6F7" />
+
+    <link href="/manifest" rel="manifest" />
   </head>
   <body class="theme-mocha">
     <div id="app"></div>
