feat: add metadata (#2)
* feat: add metadata

* feat: add manifest

* test: use useHead for dynamic whatever

* Revert "test: use useHead for dynamic whatever"

This reverts commit 90453be84f4a7d3892f6cb5c1c8a64609cc9214c.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <link rel="icon" href="/me.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iris!</title>
+
+    <meta property="og:title" content="iris!" />
+    <meta property="og:description" content="web developer & rust enthusiast" />
+    <meta property="og:site_name" content="iris's website" />
+    <meta property="og:image" content="https://iri.moe/me.webp" />
+    <meta
+      property="og:image:alt"
+      content="an anime girl with long, pink twin-tailed hair, blue eyes, and a slightly pouting or curious expression. She is wearing a school uniform with a white blouse, a beige vest, and a red ribbon bow. She is holding a copy of 'The C Programming Language' book by Brian W. Kernighan and Dennis M. Ritchie"
+    />
+
+    <meta property="og:url" content="https://iri.moe" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_GB" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="theme-color" content="#BCA6F7" />
+
+    <link href="/manifest" rel="manifest" />
   </head>
   <body class="theme-mocha">
     <div id="app"></div>
